Makefile updated to generate pdf from man page

--- a/doc/man/man1/geoeasy.1
+++ b/doc/man/man1/geoeasy.1
@@ -27,6 +27,8 @@ Process command line options and exit
 Export data files given in the command line to the selected format {geo | are | job | wld | gsi | scr | sdr | 210 | nik | csv | itr | txt | gpx | dmp | kml | sql | dxf}
 .SH EXAMPLE
 geoeasy --lang hun ~/demodata/test1.geo ./startup.tcl
+.PP
+geoeasy --nogui --exp csv ~/demodata/*.geo
 .SH SEE ALSO
 geofindkey (1)
 .SH AUTHOR
